<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tokyo Last Train</string>
    <string name="where_are_you">Where are you?</string>
    <string name="where_to_go">Where to go?</string>
    <string name="missed_train">SORRY, NO MORE TRAINS\nbut you can enjoy your night anyway</string>
    
    <!-- ERROR MESSAGES -->
    <string name="generic_error">SORRY, SOMETHING WENT WRONG\nplease try again</string>
    <string name="network_unavailable_error">NETWORK UNAVAILABLE\nplease connect to Wi-Fi</string>
    <string name="invalid_station_error">Please, insert a valid station.</string>
    <string name="equal_station_error">Please, insert a different station.</string>
    
    <string name="desc"></string>

</resources>