<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/background"
        android:contentDescription="@string/desc"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/main_vertical_margin"
        android:layout_marginLeft="@dimen/main_horizontal_margin"
        android:layout_marginRight="@dimen/main_horizontal_margin"
        android:layout_marginTop="@dimen/main_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <!-- TITLE -->

        <TextView
            android:id="@+id/label_title"
            style="@style/label_caps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/label_title" />

        <!-- ORIGIN -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_separation"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ic_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/station_ic_right_margin"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_origin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/label_origin"
                        style="@style/label_caps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/where_are_you"
                        android:textSize="@dimen/label_regular" />

                    <CheckBox
                        android:id="@+id/button_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/ic_location"
                        android:visibility="invisible" />
                </LinearLayout>

                <AutoCompleteTextView
                    android:id="@+id/textview_origin"
                    style="@style/textview_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <!-- DESTINATION -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_separation"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ic_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/station_ic_right_margin"
                android:contentDescription="@string/desc"
                android:src="@drawable/ic_destination" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/label_destination"
                        style="@style/label_caps"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/where_to_go"
                        android:textSize="@dimen/label_regular" />

                    <CheckBox
                        android:id="@+id/checkbox_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_alarm" />
                </LinearLayout>

                <AutoCompleteTextView
                    android:id="@+id/textview_destination"
                    style="@style/textview_station"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <!-- INFO -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/content_separation"
            android:layout_weight="1"
            android:gravity="center" >

		    <Button
		        android:id="@+id/button_ok"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/ic_ok" />

            <FrameLayout
                android:id="@+id/layout_loading"
                android:layout_width="@dimen/loading_ic_size"
                android:layout_height="@dimen/loading_ic_size"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_last_train"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/label_station"
                    style="@style/label_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/label_regular" />

                <TextView
                    android:id="@+id/label_line"
                    style="@style/label_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/label_regular" />

                <TextView
                    android:id="@+id/label_departure_time"
                    style="@style/label_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/label_regular" />

                <TextView
                    android:id="@+id/label_timer"
                    style="@style/label_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/label_timer" />
            </LinearLayout>

            <TextView
                android:id="@+id/label_missed_train"
                style="@style/label_regular"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/info_ic_bottom_margin"
                android:drawableTop="@drawable/ic_missed_train"
                android:gravity="center"
                android:text="@string/missed_train"
                android:textSize="@dimen/label_regular" />

            <TextView
                android:id="@+id/label_error"
                android:visibility="gone"
                style="@style/label_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/info_ic_bottom_margin"
                android:drawableTop="@drawable/ic_missed_train"
                android:gravity="center"
                android:text="@string/missed_train"
                android:textSize="@dimen/label_regular" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>